Prevent horizontal scrolling on contact page with work breaks.

--- a/static/global.css
+++ b/static/global.css
@@ -22,6 +22,11 @@ body {
 	margin: 6pt;
 }
 
+main {
+	/* for long cryptographic fingerprints or keys that won't break on their own */
+	overflow-wrap: anywhere;
+}
+
 a {
 	color: var(--anchor);
 }
